--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Test</title>
+    <title>AI Tester</title>
     <link rel="icon" href="cont.png">
     <style>
         body {
@@ -71,7 +71,7 @@
         .bubble {
             background-color: #e0f7fa;
             padding: 15px;
-            margin: 5px 0; /* Reduced margin to move bubbles higher */
+            margin: 20px 0; /* Increased margin to move bubbles higher */
             border-radius: 20px;
             max-width: 75%;
             position: relative;
@@ -100,6 +100,18 @@
         .bubble .trash-icon:hover {
             opacity: 0.7; /* Slight opacity change on hover */
         }
+
+        .random-bubble {
+            background-color: white;
+            padding: 15px;
+            margin: 20px 0; /* Increased margin to move bubbles higher */
+            border-radius: 20px;
+            max-width: 50%;
+            position: relative;
+            word-wrap: break-word;
+            align-self: flex-start; /* Align to the left */
+            color: black; /* Text color for better readability */
+        }
     </style>
 </head>
 <body>
@@ -112,6 +124,14 @@
     </div>
 
     <script>
+        function getRandomNumbers() {
+            let numbers = [];
+            for (let i = 0; i < 10; i++) {
+                numbers.push(Math.floor(Math.random() * 10));
+            }
+            return numbers.join(' ');
+        }
+
         function submitMessage() {
             var message = document.getElementById("message").value;
             if (message.trim() !== "") {
@@ -133,6 +153,14 @@
                 // Add the new bubble to the top of the bubble container
                 var container = document.getElementById("bubble-container");
                 container.prepend(bubble);
+
+                // Create and add the random numbers bubble to the left
+                var randomBubble = document.createElement("div");
+                randomBubble.className = "random-bubble";
+                randomBubble.innerText = getRandomNumbers();
+
+                // Add the random numbers bubble before the message bubble
+                container.prepend(randomBubble);
 
                 // Clear the message box
                 document.getElementById("message").value = "";
