--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Tester</title>
+    <title>AI Test</title>
     <link rel="icon" href="cont.png">
     <style>
         body {
@@ -71,7 +71,7 @@
         .bubble {
             background-color: #e0f7fa;
             padding: 15px;
-            margin: 20px 0; /* Increased margin to move bubbles higher */
+            margin: 5px 0; /* Reduced margin for less distance between bubbles */
             border-radius: 20px;
             max-width: 75%;
             position: relative;
@@ -104,7 +104,7 @@
         .random-bubble {
             background-color: white;
             padding: 15px;
-            margin: 20px 0; /* Increased margin to move bubbles higher */
+            margin: 5px 0; /* Reduced margin for less distance between bubbles */
             border-radius: 20px;
             max-width: 50%;
             position: relative;
