--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Test</title>
+    <title>AI Chat Test</title>
     <link rel="icon" href="cont.png">
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('bg.png');
+            background-image: url('bg.jpg'); /* Updated background image */
             background-repeat: repeat;
-            background-size: 70px; /* Updated background size */
+            background-size: 70px; /* Adjusted background size */
             height: 100vh;
             overflow: hidden; /* Prevent overflow */
         }
