--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Chat Test</title>
+    <title>AI Test</title>
     <link rel="icon" href="cont.png">
     <style>
         body {
@@ -25,7 +25,7 @@
             flex-direction: column-reverse; /* New messages appear at the top */
             position: relative;
             height: calc(100vh - 80px); /* Adjust height considering the input area */
-            margin-bottom: 20px; /* Ensure some space at the bottom for input area */
+            margin-bottom: 80px; /* Ensure enough space at the bottom for input area */
         }
 
         .input-area {
@@ -111,6 +111,7 @@
             word-wrap: break-word;
             align-self: flex-start; /* Align to the left */
             color: black; /* Text color for better readability */
+            margin-bottom: 30px; /* Ensure it spawns higher from the input box */
         }
     </style>
 </head>
