--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLS UPDATE</title>
+    <title>AI Test</title>
     <link rel="icon" href="cont.png">
     <style>
         body {
@@ -113,6 +113,20 @@
             color: black; /* Text color for better readability */
             margin-bottom: 30px; /* Ensure it spawns higher from the input box */
         }
+
+        .deleted-message {
+            background-color: #e0e0e0; /* Light gray background for deleted messages */
+            padding: 15px;
+            margin: 5px 0; /* Reduced margin for less distance between bubbles */
+            border-radius: 20px;
+            max-width: 75%;
+            position: relative;
+            word-wrap: break-word;
+            align-self: flex-end;
+            font-style: italic; /* Italicized text */
+            color: #666; /* Dark gray color for deleted messages */
+            text-align: center; /* Center the text */
+        }
     </style>
 </head>
 <body>
@@ -125,12 +139,12 @@
     </div>
 
     <script>
-        function getRandomNumbers() {
-            let numbers = [];
-            for (let i = 0; i < 10; i++) {
-                numbers.push(Math.floor(Math.random() * 10));
-            }
-            return numbers.join(' ');
+        function getRandomNumber() {
+            return Math.floor(Math.random() * 255) + 1; // Random number between 1 and 255
+        }
+
+        function getRandomString() {
+            return `${getRandomNumber()}-${getRandomNumber()}.${getRandomNumber()}-${getRandomNumber()}.${getRandomNumber()}-${getRandomNumber()}.${getRandomNumber()}`;
         }
 
         function submitMessage() {
@@ -145,7 +159,12 @@
                 var trashIcon = document.createElement("div");
                 trashIcon.className = "trash-icon";
                 trashIcon.onclick = function() {
-                    bubble.remove(); // Remove the bubble when trash icon is clicked
+                    var deletedBubble = document.createElement("div");
+                    deletedBubble.className = "deleted-message";
+                    deletedBubble.innerText = "Message deleted"; // Display deletion message
+                    
+                    // Replace the bubble with the deleted message
+                    bubble.parentNode.replaceChild(deletedBubble, bubble);
                 };
 
                 // Append trash icon to the bubble
@@ -158,7 +177,7 @@
                 // Create and add the random numbers bubble to the left
                 var randomBubble = document.createElement("div");
                 randomBubble.className = "random-bubble";
-                randomBubble.innerText = getRandomNumbers();
+                randomBubble.innerText = getRandomString();
 
                 // Add the random numbers bubble before the message bubble
                 container.prepend(randomBubble);
