--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Testing</title>
+    <title>AI Test</title>
     <link rel="icon" href="cont.png">
     <style>
         body {
@@ -15,6 +15,7 @@
             background-size: 70px;
             height: 100vh;
             overflow: hidden;
+            box-sizing: border-box;
         }
 
         .container {
@@ -26,6 +27,8 @@
             position: relative;
             height: calc(100vh - 80px);
             margin-bottom: 80px;
+            max-width: 100vw;
+            box-sizing: border-box;
         }
 
         .input-area {
@@ -39,6 +42,7 @@
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
             z-index: 1;
             margin: 0 15px;
+            box-sizing: border-box;
         }
 
         textarea {
@@ -49,6 +53,7 @@
             border: 1px solid #ccc;
             resize: none;
             height: 50px;
+            box-sizing: border-box;
         }
 
         button {
@@ -62,6 +67,7 @@
             cursor: pointer;
             height: 50px;
             margin-right: 5px;
+            box-sizing: border-box;
         }
 
         button:hover {
@@ -76,13 +82,15 @@
             align-items: flex-end;
             position: relative;
             margin-left: auto;
+            box-sizing: border-box;
         }
 
         .message-container.ai-message {
             align-items: flex-start;
             max-width: 75%;
             margin-right: auto;
-            margin-left: 0; /* Align to the left edge */
+            margin-left: 0;
+            box-sizing: border-box;
         }
 
         .message-label {
@@ -109,6 +117,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            box-sizing: border-box;
         }
 
         .bubble:hover .trash-icon {
@@ -139,6 +148,7 @@
             word-wrap: break-word;
             color: black;
             margin-bottom: 30px;
+            box-sizing: border-box;
         }
 
         .deleted-message {
@@ -152,6 +162,7 @@
             font-style: italic;
             color: #666;
             text-align: center;
+            box-sizing: border-box;
         }
 
         .message-container.ai-message .bubble {
