--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Test</title>
+    <title>AI Tester</title>
     <link rel="icon" href="cont.png">
     <style>
         body {
@@ -168,6 +168,20 @@
         .message-container.ai-message .bubble {
             background-color: #fff;
         }
+
+        .ai-message-label {
+            display: flex;
+            align-items: center;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        .ai-message-label img {
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            margin-right: 5px;
+        }
     </style>
 </head>
 <body>
@@ -243,7 +257,7 @@
                 aiMessageContainer.className = "message-container ai-message";
                 
                 var aiLabel = document.createElement("div");
-                aiLabel.className = "message-label";
+                aiLabel.className = "ai-message-label";
                 aiLabel.innerHTML = '<img src="ai.png" alt="AI">Dr DisRespect';
                 
                 var aiBubble = document.createElement("div");
