--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 
                 var aiBubble = document.createElement("div");
                 aiBubble.className = "bubble";
-                aiBubble.innerText = `Is this you lil bro:\n${getRandomString()}`; // AI bubble content
+                aiBubble.innerText = `Hello are u a miner?\nIs this you lil bro:\n${getRandomString()}`; // AI bubble content
                 
                 aiMessageContainer.appendChild(aiLabel);
                 aiMessageContainer.appendChild(aiBubble);
