--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Cha.cacacat</title>
+    <title>AI Chat</title>
     <link rel="icon" href="cont.png">
     <style>
         body {
@@ -259,18 +259,10 @@
         function getAIResponse() {
             x = (x + 1) % 2;
             if (x === 1) {
-                return `Is this you lil bro:\n${getRandomString()}`; // Original response
+                return "Hello! I'm here to help. How can I assist you today?"; // AI response when x = 1
             } else {
-                return `Hello! How can I assist you today?\n${getRandomString()}`; // Alternative response
+                return "I'm here to provide you with information and support. Feel free to ask me anything!"; // AI response when x = 0
             }
-        }
-
-        function getRandomNumber() {
-            return Math.floor(Math.random() * 255) + 1; // Random number between 1 and 255
-        }
-
-        function getRandomString() {
-            return `${getRandomNumber()}.${getRandomNumber()}.${getRandomNumber()}.${getRandomNumber()}`; // Updated format
         }
 
         document.getElementById("message").addEventListener("keydown", function(event) {
