--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AdadadadI Cadadahadadadadt</title>
+    <title>AI dadadaChat</title>
     <link rel="icon" href="cont.png">
     <style>
         /* Your existing styles */
@@ -103,9 +103,9 @@
                 // Fetch information from Wikipedia
                 return await fetchWikipediaSummary(message);
             } else if (messageCount === 1) {
-                return "Hello there! How can I assist you today? Feel free to ask me anything."; // ChatGPT-like response
+                return "Hello! I'm Dr DisRespect. How can I assist you today?"; // Dr DisRespect-like response
             } else {
-                return "I'm here to help with any questions you might have. What can I do for you?"; // ChatGPT-like response
+                return "I'm Dr DisRespect, here to help with your questions. What can I do for you?"; // Dr DisRespect-like response
             }
         }
 
