--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 
                 const aiLabel = document.createElement("div");
                 aiLabel.className = "ai-message-label";
-                aiLabel.innerHTML = '<img src="ai.png" alt="AI">ChatGPT';
+                aiLabel.innerHTML = '<img src="ai.png" alt="AI">Dr DisRespect';
                 
                 const aiBubble = document.createElement("div");
                 aiBubble.className = "bubble";
